--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: "JuneFlow Module"
 #publish_to: 'none'
 repository: https://github.com/juneflow-songdo/device_preview_module
 
-version: 0.0.1+2
+version: 0.1.0
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
